<resources>
    <string name="app_name">辣鸡</string>
    <string name="register">Register</string>
    <string name="login">登录</string>
    <string name="item">&#32;&#32;&#32;&#32;操作帮助</string>
    <string name="dlan">DLAN</string>
    <string name="downloader">离线下载</string>
    <string name="local">本地</string>

    <string name="confirm">确定</string>
    <string name="cancel">取消</string>
    <string name="know">知道了</string>
    <string name="tip">提示</string>
    <string name="wait_dialog_title">正在请求，请稍后…</string>
    <string name="play_comment_post_at">发表于</string>
    <string name="wel_hint_1">欢迎页就是这么丑</string>
    <string name="wel_hint_3">反正你也不能来打我</string>

    <string name="nohttp">NoHttp</string>
    <string name="nohttp_slogan">一个有情怀的网络框架</string>

    <string name="behavior_user_head_move">com.example.lj.ljplayerhd.main.personal.AvatarImageBehavior</string>

    <!-- title field -->

    <string name="title_original_activity">NoHttp原始用法</string>
    <string name="title_rxjava_activity">RxNoHttp，与RxJava配合使用</string>
    <string name="title_method_activity">各种请求协议演示</string>
    <string name="title_image_activity">NoHttp请求图片</string>
    <string name="title_post_body_activity">POST一段JSON、自定包体</string>
    <string name="title_define_request_activity">自定义Request</string>
    <string name="title_json_activity">JsonObject、JsonArray演示</string>
    <string name="title_cache_activity">五种缓存策略</string>
    <string name="title_cache_http_activity">Http标准协议的缓存</string>
    <string name="title_cache_request_failed_read_cache_activity">请求网络失败返回缓存</string>
    <string name="title_cache_none_request_network_activity">没有缓存才去请求网络</string>
    <string name="title_cache_only_read_cache">仅仅读取缓存</string>
    <string name="title_cache_only_request_network">仅仅请求网络</string>
    <string name="title_redirect_activity">响应码300…重定向</string>
    <string name="title_upload_activity">文件上传</string>
    <string name="title_upload_single_activity">单个文件上传</string>
    <string name="title_upload_multi_activity">多个文件上传</string>
    <string name="title_upload_file_list_activity">文件List上传</string>
    <string name="title_upload_album">选择相册图片上传</string>
    <string name="title_download_activity">文件下载</string>
    <string name="title_download_single_activity">单个文件下载</string>
    <string name="title_download_list_activity">多个文件下载</string>
    <string name="title_cancel_activity">如何取消请求</string>
    <string name="title_cancel_linkage_activity">和Activity/Fragment声明周期联动</string>
    <string name="title_cancel_sign_activity">取消指定的某几个请求</string>
    <string name="title_cancel_all_activity">取消队列中所有请求</string>
    <string name="title_sync_activity">同步请求</string>
    <string name="title_proxy_activity">通过代理请求服务器</string>
    <string name="title_https_activity">Https请求演示</string>

    <!-- Common -->

    <string name="request_start">发起请求</string>

    <string name="request_original_result">响应码：%1$d\n花费时间：%2$d毫秒。</string>

    <string name="method_request_failed">有的方法为什么请求失败？</string>
    <string name="method_request_failed_reason">在RFC2616中规定了Http1.1支持的请求方法，有些服务器、客户端(Android系统)不支持某些请求方法，所以请求失败是正常的，但是我们还是要遵守协议，推荐服务器和客户端都支持，这是非常好的设计和体验。</string>

    <string name="request_succeed">请求成功</string>
    <string name="request_failed">请求失败</string>

    <!-- RequestMethod -->

    <string name="request_json_result">请求方法：%1$s\n请求地址：%2$s\n响应数据：%3$s\n业务状态码：%4$s。</string>
    <string name="request_succeed_head">请求成功, 请求方式为HEAD, 没有响应内容。</string>
    <string name="request_method_not_allow">请求的方法被不服务器允许。</string>
    <string name="request_method_head">请求方法为HEAD，没有响应内容。</string>

    <!-- Json -->

    <string name="request_json_object">JsonObject对象</string>
    <string name="request_json_array">JsonArray对象</string>
    <string name="request_json_body_input_tip">请求输入提交的json。</string>
    <string name="request_define_fast_json">自定义FastJson请求</string>
    <string name="request_define_java_bean">自定义JavaBean请求</string>

    <!-- CacheStore -->

    <string name="request_from_cache">结果来自缓存</string>
    <string name="request_from_network">结果来自网络</string>
    <string name="request_cache_request_failed_read_cache_tip">具体的可以看看代码，仅仅一句话设置缓存模式就可以了，测试的朋友，可以先成功请求一次，然后断网再请求，就会返回缓存啦！</string>
    <string name="request_cache_only_read_cache_failed">缓存模式是Only_Read_Cache，但是没有找到缓存。</string>

    <!-- Redirect -->

    <string name="request_redirect_location">被重定向到URL：%1$s。</string>

    <!-- Upload and download -->

    <string name="upload_start">开始上传</string>
    <string name="upload_succeed">上传完毕</string>
    <string name="upload_failed">上传失败</string>
    <string name="upload_cancel">上传被取消</string>
    <string name="upload_error">上传发生错误</string>

    <string name="upload_file_status">文件状态：</string>
    <string name="upload_file_status_wait">等待操作…</string>
    <string name="upload_file_select_album">选择图片</string>
    <string name="upload_file_select_album_null">请选择图片</string>
    <string name="upload_file_select_album_null_again">文件不存在，请重新选择图片</string>

    <string name="download_mobile_data_tip">多任务下载四个文件，最好用WIFI测试喔。</string>
    <string name="download_start">开始下载</string>
    <string name="download_delete">删除文件</string>
    <string name="delete_succeed">删除成功</string>
    <!-- Download status -->
    <string name="download_progress">已下载：%1$d</string>
    <string name="download_status_pause">暂停</string>
    <string name="download_status_be_pause">下载被暂停</string>
    <string name="download_status_re_download">重新下载</string>
    <string name="download_status_again_download">再次尝试</string>
    <string name="download_status_resume">继续下载</string>
    <string name="download_status_finish">下载完成！</string>
    <!-- Download error -->
    <string name="download_error">下载出错了：%1$s</string>
    <string name="download_error_server">服务器数据错误！</string>
    <string name="download_error_network">网络不可用，请检查网络！</string>
    <string name="download_error_storage">存储卡错误，请检查存储卡！</string>
    <string name="download_error_space">存储卡空间不足！</string>
    <string name="download_error_timeout">下载超时！</string>
    <string name="download_error_un_know_host">找不到服务器。</string>
    <string name="download_error_url">URL地址错误。</string>
    <string name="download_error_un">未知错误。</string>

    <!-- Cancel -->
    <string name="no_operation_des">请看本Activity的代码和注释</string>

    <!-- error -->
    <string name="error_not_network">无可用网络,请设置网络.</string>
    <string name="error_please_check_network">网络错误,请检查网络。</string>
    <string name="error_timeout">请求超时，网络不好或者服务器不稳定。</string>
    <string name="error_not_found_server">未发现指定服务器，清切换网络后重试。</string>
    <string name="error_url_error">URL错误。</string>
    <string name="error_not_found_cache">没有找到缓存.</string>
    <string name="error_system_unsupport_method">系统不支持的请求方法。</string>
    <string name="error_parse_data_error">解析数据时发生错误。</string>
    <string name="error_unknow">未知错误。</string>
    <string name="error_response_code">服务器响应码%1$d</string>
    <string name="error_response_code_dex">服务器响应码%1$d，如果你们服务器在这种情况下也返回数据你可以处理。</string>

    <string name="net_type_mobile">移动网络,注意流量!</string>
    <string name="net_type_wifi">WIFI网络,放心使用!</string>
    <string name="click_screen_to_again">点击屏幕重试</string>
    <string name="recent_update">最近更新</string>
    <string name="recent_hit">最近热播</string>
    <string name="new_films">最新上映</string>
    <string name="top_rated">最受好评</string>

    <string name="fragment_personla">个人中心</string>
    <string-array name="fragment_personal_items">
        <item>操作帮助</item>
        <item>联系我们</item>
        <item>系统设置</item>
        <item>版本升级</item>
    </string-array>
    <integer-array name="fragment_personal_ioc">
        <item>@drawable/fragment_personal_center_setting</item>
        <item>@drawable/fragment_personal_center_setting</item>
        <item>@drawable/fragment_personal_center_setting</item>
        <item>@drawable/fragment_personal_center_setting</item>
    </integer-array>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in </string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">账号异常！</string>
    <string name="error_confirm_password">两次输入不一样！</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="remember_password">Remember password</string>
    <string name="wellcom_lj">辣鸡</string>
    <string name="register_password">Password</string>
    <string name="register_confirm">Password (confirm)</string>
    <!-- Strings related to register -->
    <string name="register_retrun_login">返回登录</string>

    <!-- 登陆返回数值 -->
    <string name="usernotexist">用户不存在,或者被删除</string>
    <string name="passwordwrong">用户名或密码错误</string>
    <string name="connectwrong">连接超时</string>
    <string name="wrongnotdefined">未定义错误</string>
    <string name="loginsuccess">登陆成功</string>
    <string name="usernamenotnull">用户名密码不能为空</string>
    <string name="repasswordwrong">两次输入的密码不一致</string>

    <!-- 注册返回数值 -->
    <string name="usernameuninvalide">用户名不合法</string>
    <string name="involve">包含不允许注册的词语</string>
    <string name="usernametooshort">用户名或密码太短</string>
    <string name="usernameexist">用户名已经存在</string>
    <string name="canntregister">10分钟内不能再次注册</string>
    <string name="registersuccess">注册成功</string>

    <!-- 个人中心 -->
    <string name="history">播放历史</string>
    <string name="collection">收藏</string>
    <string name="cache">缓存</string>

    <!-- 请求权限 -->
    <string name="rationale_ask_again">请求权限</string>
    <string name="title_settings_dialog">请求权限</string>
    <string name="setting">设置</string>
    <string name="returned_from_app_settings_to_activity">你已经有读写内存卡的权限了！</string>
    <string name="rationale_sms">LJ请求读取内存卡权限</string>


</resources>
