<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>


        <variable
            name="loginPresenter"
            type="com.example.lj.ljplayerhd.main.personal.Login.LoginPresenter" />
    </data>

    <RelativeLayout xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/wellcom_text"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:gravity="center"
                android:text="@string/wellcom_lj"
                android:textColor="@color/black"
                android:textSize="30sp" />

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <AutoCompleteTextView
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_email"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:counterMaxLength="10"
                app:counterOverflowTextAppearance="@android:style/TextAppearance.DeviceDefault.Small"
                app:hintAnimationEnabled="true"
                app:passwordToggleEnabled="true">

                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/user"
                    android:hint="@string/prompt_password"
                    android:imeActionId="@+id/login"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/email_sign_in_button"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:onClick="@{(v)->loginPresenter.login() }"
                android:text="@string/action_sign_in"
                android:textStyle="bold" />


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/regiter"
                    style="?android:textAppearanceSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/register"
                    android:onClick="@{(v)->loginPresenter.shoewRegisterFragment()}"
                    android:textStyle="bold" />

                <CheckBox
                    android:id="@+id/rememberPassword"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBottom="@+id/regiter"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:onCheckedChanged="@{(cb, isChecked)-> loginPresenter.rememberPassword(isChecked)}"
                    android:text="@string/remember_password"
                    android:textColor="@color/red" />
            </RelativeLayout>
        </LinearLayout>


        <!-- android:id="@+id/login_progress"-->
        <include layout="@layout/fragment_login_progress_dialog" />
    </RelativeLayout>
</layout>
